# AI-WATER

./: .env.example  .gitignore  .vercelignore  CONTRIBUTING.md  DEPLOY_BACKEND.md  Dockerfile.api  Dockerfile.dashboard  Dockerfile.ingestion  LICENSE  Procfile  README.md  REAL_APP_CHECKLIST_REPORT.md  SECURITY.md  alembic.ini  api_lite.py  api_server.py  demo_ai_advantages.py  demo_ai_explanation.py  demo_honest_assessment.py  demo_honest_assessment_v2.py  demo_real_world_connection.py  demo_usage_vs_leak.py  demo_what_ai_does.py  docker-compose.prod.yml  docker-compose.yml  init-db.sql  init.sql  pyproject.toml  pyrightconfig.json  render-api.yaml  render.yaml  requirements-api.txt  requirements.txt  run_demo.py  run_system.py  start.py  start_system.py  test_leak_detection.py  vercel.json
.github/: dependabot.yml
api/: dashboard.py  index.py  requirements.txt
dashboard/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
docs/: 01_system_architecture.md  02_ai_methodology.md  03_deployment_guide.md  04_operator_manual.md  05_business_model.md  06_iwa_alignment.md  DATA_FLOW_DEPENDENCY_MAP.md  ELON_MUSK_FEATURES.md  REMOTE_ACCESS.md  STEP_8_XAI_IMPLEMENTATION.md  TECHNICAL_DOCUMENTATION.md  TECHNICAL_DOCUMENTATION_WORD.md
migrations/: env.py
mosquitto/: acl  mosquitto.conf  passwd
nginx/: nginx.conf
prototype/: demo.py  run_simulation.py  simulator.py
scripts/: init_database.py  seed_demo_data.py
src/: __init__.py
src/ai/: __init__.py  (+10 more)
tests/: conftest.py  test_api.py  test_community_tracking.py  test_critical_gaps.py  (+2 more)
(+312 files in other folders)
